--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,11 +1,14 @@
 @import 'colors.scss';
-
+@import 'media.scss';
 .page-loading{
     position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255,0.1);
     z-index: 99;
+    height: 100vh;
+    width: 100vw;
 }
 .logo {
     background-image: url('../public/logo.png');
@@ -13,6 +16,13 @@
     margin: 16px 8px;
     background-size: contain;
     background-repeat: no-repeat;
+}
+.ant-page-header-heading-title, .ant-breadcrumb-link{
+  text-transform: capitalize !important;
+  cursor: pointer;
+}
+.ant-table-content{
+  overflow: auto;
 }
 #components-layout-demo-custom-trigger .trigger {
     font-size: 18px;
