noice working on nice layout finally back to work after good break

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,47 +1,1 @@
-@import 'colors.scss';
-@import 'media.scss';
-.page-loading{
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(255, 255, 255,0.1);
-    z-index: 99;
-    height: 100vh;
-    width: 100vw;
-}
-.logo {
-    background-image: url('../public/logo.png');
-    height: 40px;
-    margin: 16px 8px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-.ant-page-header-heading-title, .ant-breadcrumb-link{
-  text-transform: capitalize !important;
-  cursor: pointer;
-}
-.ant-table-content{
-  overflow: auto;
-}
-#components-layout-demo-custom-trigger .trigger {
-    font-size: 18px;
-    line-height: 64px;
-    padding: 0 24px;
-    cursor: pointer;
-    transition: color 0.3s;
-  }
-  
-  #components-layout-demo-custom-trigger .trigger:hover {
-    color: #FAFAFA;
-  }
-  
-  #components-layout-demo-custom-trigger .logo {
-    height: 32px;
-    background: $bg;
-    margin: 16px;
-  }
-  
-  .site-layout .site-layout-background {
-    background: #FAFAFA;
-  }
+@import 'layout';
