--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -11,6 +11,7 @@
     color: rgba(0, 0, 0, 0.6);
     position: relative;
     border-radius: 8px;
+    z-index: 99;
 }
 .sidebar-mobile{
     position: absolute;
@@ -55,8 +56,8 @@
         padding: 24px;
     }
 }
-.content{
-    margin: 32px !important;
+.page-content{
+    margin: 32px 16px !important;
 }
 .content-breadcrumbs{
     margin-bottom: 24px !important;
