Shopify like ver, admin panel to create new shops

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,6 +19,10 @@
 .cell { // set color of cells to white
     color: #fafafa;
 }
+.dot.disabled{
+  color: #F4F4F7 !important;
+  background-color: #0070f3 !important;
+}
 // remove number input arrows
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
