--- a/styles/global.scss
+++ b/styles/global.scss
@@ -19,6 +19,9 @@
 .cell { // set color of cells to white
     color: #fafafa;
 }
+.link {
+  color: #fafafa;
+}
 .dot.disabled{
   color: #F4F4F7 !important;
   background-color: #0070f3 !important;
